spacing set between above prevention

--- a/style.css
+++ b/style.css
@@ -235,6 +235,9 @@ a.nav-link:hover{
         margin-bottom:10vh;
     }
 
+    .symptoms-container{
+    margin-bottom: 20vh;
+    }
 }
 
 
